# learning_opencv

Work4/: CMakeLists.txt
Work4/config/: work4_ball_motion.yaml  work4_tracker.yaml
Work4/doc/: L3机器人足球场仿真环境配置.md  page1.md  page2.md  run_capture_ready.sh
Work4/launch/: work4_pipeline.launch
Work4/src/: kinect_color_tracker.py  move_ball_random.py
Work5/: CMakeLists.txt  homework.md  package.xml
Work5/config/: ball_motion.yaml  face_capture.yaml  follow_green_ball.yaml  hsv_green_ball.yaml  work4_chase.yaml
Work5/doc/: L3机器人足球场仿真环境配置.md  References.md  command.md  new_page1.md  new_page2.md  page3.md  run_capture_ready.sh
Work5/launch/: face_capture.launch  follow_ball.launch  hsv_demo.launch  wpb_balls_headless.launch
Work5/src/: ball_chase_controller.py  face_capture_node.py  follow_node.py  hsv_node.py  image_pkg_common.py
Work6/: CMakeLists.txt  homework.md  package.xml  plan.md  run_work6.sh  run_work6_tmux.sh  stop_work6_tmux.sh
Work6/config/: nearest_obstacle.yaml  pointcloud.yaml  red_bottle.yaml  work6_pointcloud.rviz
Work6/doc/: page1.md  page2.md  page3.md  page4.md
Work6/launch/: work6_all.launch  work6_detection.launch  work6_pointcloud.launch  work6_rviz.launch  wpr_bottles.launch
Work6/output/: .gitignore
Work6/src/: get_pointcloud.py  get_pointcloud3.py  nearest_obstacle_final.py  red_bottle_smart.py
Work7/: homework.md
Work7/doc/: page1.md  page2.md  page3.md  page4.md  page5.md
learn_test/: test01_helloopencv.py  test02_readimg.py  test03_color.py  test04_catimage.py  test05_draw.py  test06_blur.py  test07_matchTemplate.py
work1/: clean_img.py  detect_club_multi_template.py  generate_club_templates.py
work2/: eg4_whoesface.py
work3/: CMakeLists.txt  KEY_FUNCTIONS.md  PROJECT_FLOW.md  README.md  package.xml  requirements.txt
work3/config/: control_params.yaml  hsv_red_range.yaml  mecanum_controllers.yaml  scene_layout.yaml
work3/launch/: ball_control.launch  mecanum_sim.launch
work3/rviz/: mecanum_robot.rviz
work3/scripts/: create_test_video.py  test_cmd_vel.sh  test_mecanum.py
work3/src/: ball_detector.py  mecanum_controller.py  mecanum_driver.py  mecanum_logic.py  mecanum_visualizer.py
work3/tests/: test_mecanum_logic.py
work3/urdf/: mecanum_robot_ridgeback.urdf
