<?xml version="1.0"?>
<package format="2">
  <name>image_pkg</name>
  <version>0.1.0</version>
  <description>Image processing package for Work5 ball tracking, following, and face capture demos.</description>

  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
</package>
